--- a/src/assets/scss/game/layout/_input.scss
+++ b/src/assets/scss/game/layout/_input.scss
@@ -14,6 +14,10 @@
                 font-size: 1.25em;
             }
 
+            .Input__Layout.--hide {
+                display: none;
+            }
+
             .Input__Button {
                 display: flex !important;
             
